; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_filehandling.c_hc_fwrite.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_filehandling.c_hc_fwrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64, i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @hc_fwrite(i8* %0, i64 %1, i64 %2, %struct.TYPE_3__* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_3__*, align 8
  %10 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store %struct.TYPE_3__* %3, %struct.TYPE_3__** %9, align 8
  store i64 -1, i64* %10, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %12 = icmp eq %struct.TYPE_3__* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %4
  %14 = load i64, i64* %10, align 8
  store i64 %14, i64* %5, align 8
  br label %50

15:                                               ; preds = %4
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 3
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %28

20:                                               ; preds = %15
  %21 = load i8*, i8** %6, align 8
  %22 = load i64, i64* %7, align 8
  %23 = load i64, i64* %8, align 8
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 8
  %27 = call i64 @gzfwrite(i8* %21, i64 %22, i64 %23, i32 %26)
  store i64 %27, i64* %10, align 8
  br label %43

28:                                               ; preds = %15
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 1
  %31 = load i64, i64* %30, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %28
  br label %42

34:                                               ; preds = %28
  %35 = load i8*, i8** %6, align 8
  %36 = load i64, i64* %7, align 8
  %37 = load i64, i64* %8, align 8
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 8
  %41 = call i64 @fwrite(i8* %35, i64 %36, i64 %37, i32 %40)
  store i64 %41, i64* %10, align 8
  br label %42

42:                                               ; preds = %34, %33
  br label %43

43:                                               ; preds = %42, %20
  %44 = load i64, i64* %10, align 8
  %45 = load i64, i64* %8, align 8
  %46 = icmp ne i64 %44, %45
  br i1 %46, label %47, label %48

47:                                               ; preds = %43
  store i64 -1, i64* %5, align 8
  br label %50

48:                                               ; preds = %43
  %49 = load i64, i64* %10, align 8
  store i64 %49, i64* %5, align 8
  br label %50

50:                                               ; preds = %48, %47, %13
  %51 = load i64, i64* %5, align 8
  ret i64 %51
}

declare dso_local i64 @gzfwrite(i8*, i64, i64, i32) #1

declare dso_local i64 @fwrite(i8*, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
